@@ -1,5 +1,6 @@
 <b>Version 2.2.1:</b><br/><br/>
     &#8226; Better notification when replying to tweet<br/>
+    &#8226; Only pre-cache over wifi option<br/>
     &#8226; Bug fixes<br/>
     &#8226; Crash fixes<br/>
     &#8226; Translation updates<br/>
